Fixed bug with market modal not resetting

--- a/src/client/app/views/manage.html
+++ b/src/client/app/views/manage.html
@@ -38,10 +38,7 @@
                 <div>
                     <span class="new-heading-style">Markets</span>
                     <span class="pull-right">
-                        <button class="btn beLocal-btn-filled" data-toggle="modal" ng-click="resetMarketModal()" data-target="#marketModal" id="addMarketBtn">
-                            <div class="hidden-mobile" ng-click="resetLocationModal()">Create New Market</div>
-                            <div class="show-mobile">+</div>
-                        </button>
+                        <button class="btn beLocal-btn-filled" ng-click="resetLocationModal()" data-toggle="modal" data-target="#marketModal" id="addMarketBtn">Create New Market</button>
                     </span>                        
                 </div>
                 <!-- repeating <font></font>r each location that seller has in the db -->
