--- a/src/client/app/views/manage.html
+++ b/src/client/app/views/manage.html
@@ -121,10 +121,10 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.imageField.$invalid }">
-                                    <label ng-hide="isEditingItem" for="item-image">Add Image</label>
-                                    <label ng-show="isEditingItem" for="item-image">Change Image</label><br />
-                                    <img ng-show="displayItemThumbnail" src="#" id="itemPreview" />
-                                    <input onchange="angular.element(this).scope().fileNameChanged(this.files)" name="imageField" type="file" id="item-image">
+                                    <label ng-hide="isEditingItem" for="market-image">Add Image</label>
+                                    <label ng-show="isEditingItem" for="market-image">Change Image</label><br />
+                                    <img ng-show="displayMarketThumbnail" src="#" id="itemPreview" />
+                                    <input onchange="angular.element(this).scope().fileNameChanged(this.files)" name="imageField" type="file" id="market-image">
                                     <p ng-show="marketImageError != null" class="help-block"><small style="color: #a94442;" >{{marketImageError}}</small></p>                                      
                                 </div>
                                
