--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -594,14 +594,14 @@
                     <div class="full-width-tabs" ng-show="isEditingLocation == false">
                         <ul class="nav nav-tabs location-tabs" role="tablist">
                               <li role="presentation" class="active full-width"><a id="marketLocationTab" href="/vendor/#marketLocation" ng-click="doMarketLocation()" role="tab" data-toggle="tab">Join Existing Market</a></li>
-                              <li role="presentation" class="full-width"><a id="customLocationTab" href="/vendor/#customLocation" ng-click="doCustomLocation()" role="tab" data-toggle="tab">Create New Custom Location</a></li>
+                              <li role="presentation" class="full-width"><a id="customLocationTab" href="/vendor/#customLocation" ng-click="doCustomLocation()" role="tab" data-toggle="tab"><span class="hidden-mobile">Create</span> New Custom Location</a></li>
                         </ul>
                     </div>
                     <div class="tab-content">
                         <div class="tab-pane" id="customLocation" class="profile-modal">                                 
                             <form role="form" name="locationForm" novalidate>
                                 <div class="row">
-                                    <div class="col-xs-6 col-md-6">
+                                    <div class="col-xs-12 col-sm-6">
                                         <div class="form-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationField.$invalid }">
                                             <label class="control-label">Location Name</label>
                                             <input required ng-model="locationName" type="text" name="locationField" class="form-control" id="item-name" placeholder="Location Name" maxlength="35"/>
@@ -610,13 +610,13 @@
                                             </span>
                                         </div>
                                     </div>                        
-                                    <div class="col-xs-6 col-md-6">
+                                    <div class="col-xs-12 col-sm-6">
                                         <div class="form-group">
-                                            <label class="control-label">Location Type</label><br />
+                                            <label class="control-label">Location Type</label><br/>
                                             <label class="radio-inline">
                                               <input type="radio" ng-model="locationType" name="locationTypeOptions" id="farmRadio" value="true"><p>One Time Event</p>
                                             </label>
-                                            <label class="radio-inline radio-inline-responsive">
+                                            <label class="radio-inline">
                                               <input type="radio" ng-model="locationType" name="locationTypeOptions" id="marketRadio" value="false"><p>Recurring Event</p>
                                             </label>                            
                                         </div>
@@ -624,7 +624,7 @@
                                 </div>
                                 <!-- One Time Date Options -->
                                 <div ng-show="locationType" class="row">
-                                    <div class="col-xs-6 col-md-6">
+                                    <div class="col-xs-12 col-md-6">
                                         <div class="form-group">
                                           <label>Date:</label>                      
                                           <div class="input-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.dateField.$invalid }">
@@ -635,16 +635,16 @@
                                           </div>
                                         </div>                               
                                     </div>                        
-                                    <div class="col-xs-3 col-md-3">
+                                    <div class="col-xs-6 col-md-3">
                                         <div class="form-group" ng-class="{'has-error': newLocationSubmitted && locationForm.startField.$invalid}">
                                             <label class="control-label"><i class="fa fa-clock-o"></i> Start Time</label>
-                                            <input required type="text" class="form-control" size="8" ng-model="startTime" name="startField" bs-timepicker>
+                                            <input required type="text" class="form-control mobile-form-padding" size="8" ng-model="startTime" name="startField" bs-timepicker>
                                         </div>
                                     </div>
-                                    <div class="col-xs-3 col-md-3">
+                                    <div class="col-xs-6 col-md-3">
                                         <div class="form-group" ng-class="{'has-error': newLocationSubmitted && locationForm.endField.$invalid}">
                                             <label class="control-label"><i class="fa fa-clock-o"></i> End Time</label>
-                                            <input required type="text" class="form-control" size="8" ng-model="endTime" name="endField" bs-timepicker>
+                                            <input required type="text" class="form-control mobile-form-padding" size="8" ng-model="endTime" name="endField" bs-timepicker>
                                         </div>
                                     </div>
                                 </div>
