--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -203,8 +203,13 @@
                                     <span ng-show="location.recurrences.end_date"> to {{location.recurrences.end_date | date:"MMMM d'"}}</span>
                                 </p>                                
 
-                                <div ng-show="location.date == null" >
-                                <p><b>HOURS<span ng-show="location.recurrences"> FOR THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}}</span>:</b>
+                                <div ng-show="location.date == null">
+                                <span ng-show="compareDates(getMonday(minDate), initDate(location.recurrences.start_date))">
+                                    <p><b>HOURS<span ng-show="location.recurrences"> FOR THIS WEEK</span>:</b></p>
+                                </span>                                
+                                <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.start_date))">
+                                    <p><b>HOURS<span ng-show="location.recurrences"> FOR THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{addDays(getMonday(initDate(location.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}</span>:</b></p>
+                                </span>
                                         <ul class="list-inline store-hours">&nbsp
                                         <li ng-repeat="day in location.address.hours">
                                             <span ng-hide="compareDates(getMonday(initDate(location.recurrences.next)), initDate(location.recurrences.start_date)) && day.weekday < initDate(location.real_start).getDay()"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
